--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^7.1.4",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
+    "gulp-standard": "^10.1.1",
     "postcss-reporter": "^5.0.0",
     "stylelint": "^8.1.1"
   }
