--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/juliacraig/juliacraig.github.io#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.4",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-postcss": "^7.0.0",
     "gulp-responsive": "^2.8.0",
