--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-postcss": "^7.0.0",
     "gulp-responsive": "^2.8.0",
     "gulp-standard": "^10.1.1",
+    "photoswipe": "^4.1.2",
     "picturefill": "^3.0.2",
     "postcss-reporter": "^5.0.0",
     "sharp": "^0.18.4",
