--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-inject": "^4.3.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-postcss": "^7.0.0",
     "gulp-responsive": "^2.8.0",
     "gulp-standard": "^10.1.1",
+    "image-size": "^0.6.1",
     "photoswipe": "^4.1.2",
     "picturefill": "^3.0.2",
     "postcss-reporter": "^5.0.0",
